test/fails/bad_functions/void.lgl
declare void f();

void main() {
    auto x = f();
    return;
}